led-botao/build/log/idf_py_stdout_output_71576
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/arthur/development/projects/fse/esp-32/led-botao/build/bootloader/esp-idf/esptool_py && /Users/arthur/.espressif/python_env/idf5.4_py3.9_env/bin/python /Users/arthur/esp/v5.4.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/arthur/development/projects/fse/esp-32/led-botao/build/bootloader/bootloader.bin
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj 
/Users/arthur/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/arthur/development/projects/fse/esp-32/led-botao/build/config -I/Users/arthur/esp/v5.4.1/esp-idf/components/newlib/platform_include -I/Users/arthur/esp/v5.4.1/esp-idf/components/freertos/config/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/freertos/config/include/freertos -I/Users/arthur/esp/v5.4.1/esp-idf/components/freertos/config/xtensa/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/arthur/esp/v5.4.1/esp-idf/components/freertos/esp_additions/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_hw_support/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_hw_support/include/soc -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_hw_support/dma/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_hw_support/ldo/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/heap/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/heap/tlsf -I/Users/arthur/esp/v5.4.1/esp-idf/components/log/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/soc/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/soc/esp32 -I/Users/arthur/esp/v5.4.1/esp-idf/components/soc/esp32/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/soc/esp32/register -I/Users/arthur/esp/v5.4.1/esp-idf/components/hal/platform_port/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/hal/esp32/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/hal/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_rom/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_rom/esp32/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_rom/esp32/include/esp32 -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_rom/esp32 -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_common/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_system/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_system/port/soc -I/Users/arthur/esp/v5.4.1/esp-idf/components/esp_system/port/include/private -I/Users/arthur/esp/v5.4.1/esp-idf/components/xtensa/esp32/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/xtensa/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/xtensa/deprecated_include -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/include/apps -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/include/apps/sntp -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/lwip/src/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/port/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/port/freertos/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/port/esp32xx/include -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/arthur/esp/v5.4.1/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/arthur/esp/v5.4.1/esp-idf/components/spi_flash/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/arthur/development/projects/fse/esp-32/led-botao=. -fmacro-prefix-map=/Users/arthur/esp/v5.4.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj -c /Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c: In function 'trataInterrupcaoBotao':
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:35:20: error: implicit declaration of function 'gpio_get_level' [-Wimplicit-function-declaration]
   35 |       int estado = gpio_get_level(pino);
      |                    ^~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:39:9: error: implicit declaration of function 'gpio_isr_handler_remove'; did you mean 'gpio_isr_handler'? [-Wimplicit-function-declaration]
   39 |         gpio_isr_handler_remove(pino);
      |         ^~~~~~~~~~~~~~~~~~~~~~~
      |         gpio_isr_handler
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:50:9: error: implicit declaration of function 'gpio_isr_handler_add'; did you mean 'gpio_isr_handler'? [-Wimplicit-function-declaration]
   50 |         gpio_isr_handler_add(pino, gpio_isr_handler, (void *) pino);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         gpio_isr_handler
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c: In function 'configura_pinos':
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:59:5: error: implicit declaration of function 'esp_rom_gpio_pad_select_gpio' [-Wimplicit-function-declaration]
   59 |     esp_rom_gpio_pad_select_gpio(LED);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:61:5: error: implicit declaration of function 'gpio_set_direction' [-Wimplicit-function-declaration]
   61 |     gpio_set_direction(LED, GPIO_MODE_OUTPUT);
      |     ^~~~~~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:61:29: error: 'GPIO_MODE_OUTPUT' undeclared (first use in this function)
   61 |     gpio_set_direction(LED, GPIO_MODE_OUTPUT);
      |                             ^~~~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:61:29: note: each undeclared identifier is reported only once for each function it appears in
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:63:5: error: implicit declaration of function 'gpio_set_level' [-Wimplicit-function-declaration]
   63 |     gpio_set_level(LED, 0);
      |     ^~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:67:36: error: 'GPIO_MODE_INPUT' undeclared (first use in this function)
   67 |     gpio_set_direction(BOTAO_GPIO, GPIO_MODE_INPUT);
      |                                    ^~~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:69:5: error: implicit declaration of function 'gpio_pulldown_en' [-Wimplicit-function-declaration]
   69 |     gpio_pulldown_en(BOTAO_GPIO);
      |     ^~~~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:71:5: error: implicit declaration of function 'gpio_pullup_dis' [-Wimplicit-function-declaration]
   71 |     gpio_pullup_dis(BOTAO_GPIO);
      |     ^~~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c: In function 'configura_interrupcoes':
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:76:5: error: implicit declaration of function 'gpio_set_intr_type' [-Wimplicit-function-declaration]
   76 |     gpio_set_intr_type(BOTAO_GPIO, GPIO_INTR_POSEDGE);
      |     ^~~~~~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:76:36: error: 'GPIO_INTR_POSEDGE' undeclared (first use in this function)
   76 |     gpio_set_intr_type(BOTAO_GPIO, GPIO_INTR_POSEDGE);
      |                                    ^~~~~~~~~~~~~~~~~
/Users/arthur/development/projects/fse/esp-32/led-botao/main/hello_world_main.c:81:5: error: implicit declaration of function 'gpio_install_isr_service' [-Wimplicit-function-declaration]
   81 |     gpio_install_isr_service(0);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
